--- a/packages.config
+++ b/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="Google.Protobuf" version="3.5.1" targetFramework="net461" />
+  <package id="morelinq" version="2.10.0" targetFramework="net461" />
   <package id="MySql.Data" version="6.9.12" targetFramework="net461" />
   <package id="MySql.Data.Entity" version="6.9.12" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
 </packages>
